# fastpair

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  codecov.yml  pyproject.toml  recommended.txt  setup.py  travis.yml
.github/workflows/: testing.yml
ci/: py310-oldest.yaml  py311-latest.yaml  py312-dev.yaml  py312-latest.yaml
fastpair/: __init__.py  base.py  types.py
fastpair/test/: test_fastpair.py
fastpair/tests/: conftest.py  test_fastpair.py  test_fastpair_pre_v010.py
notebooks/: basic_usage.ipynb  n-dimensional_pointsets.ipynb
